# YAMP

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: main.yml
res/: imgui.ini
res/themes/: DeepDark.json  VisualStudio.json
src/: AboutModal.cpp  AboutModal.hpp  AlbumInfoModal.cpp  AlbumInfoModal.hpp  Application.cpp  Application.h  Application.hpp  Compare.cpp  Compare.hpp  Config.h.in  Filter.cpp  Filter.hpp  Library.cpp  Library.h  Library.hpp  LibraryInfoModal.cpp  LibraryInfoModal.hpp  Log.cpp  Log.h  Modal.cpp  Modal.hpp  Player.cpp  Player.h  Player.hpp  Playlist.h  Playlist.hpp  Preferences.cpp  Preferences.h  Preferences.hpp  Song.h  Song.hpp  Texture.cpp  Texture.hpp  Themes.cpp  Themes.hpp  TrackInfoModal.cpp  TrackInfoModal.hpp  Utils.h  YAMP.cpp  YAMP.h  (+4 more)
src/Panels/: AlbumPanel.cpp  AlbumPanel.hpp  ArtistsPanel.cpp  ArtistsPanel.hpp  Modals.cpp  Modals.hpp  PlaylistsPanel.cpp  PlaylistsPanel.hpp  StatusPanel.cpp  StatusPanel.hpp  TracksPanel.cpp  TracksPanel.hpp
